# sitq

./: .gitignore  ARCHITECTURE.md  DESIGN.md  PRD_v1.md  README.md  mkdocs.yml  pyproject.toml  test_documentation.py  test_error_handling.py  test_integration_memory_db.py  test_memory_db_simple.py  test_mkdocstrings.py  test_queue_worker_integration.py  test_quick_integration.py  test_sqlite_backend.py  test_sqlite_memory_db.py  test_sqlite_simple.py  test_task_queue_core.py  test_worker_integration.py  validate_mkdocstrings.py
.github/workflows/: docs.yml  release.yml
__marimo__/: playground.ipynb  task_queue1.ipynb
__marimo__/session/: playground.py.json  task_queue1.py.json
dev/: playground.py  task_queue1.py
dev_notes/: example_end_to_end.py  validate_examples.py  verify_basic_dispatch.py  verify_concurrency_fix.py  verify_phase2_fixes.py
docs/: basic-concepts.md  index.md  installation.md  interactive-tutorial.ipynb  mkdocs.yml  quickstart.md
docs/examples/: README.md
docs/explanation/: architecture.md  limitations.md  serialization.md
docs/how-to/: contributing.md  deployment.md  error-handling.md  get-results.md  handle-failures.md  installation.md  performance.md  run-worker.md  serialization.md  sqlite-backend.md  sync-wrapper.md  (+4 more)
examples/: README.md
openspec/: IMPLEMENTATION_ORDER.md  implementation-order.md  project.md
plan/: SPEC_v1.md
scripts/: version.py
tests/: README.md  __init__.py  test_backend_simple.py  test_backend_sqlite.py  test_public_api.py  test_serialization.py  test_sync_taskqueue.py  test_taskqueue_core.py  test_taskqueue_lifecycle.py  test_worker_core.py
(+231 files in other folders)
