[project]
name = "sitq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Volker Lorrmann", email = "ligno.blades@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "aioredis>=1.3.1,<2",
    "nats-py>=2.3",
    "cloudpickle>=3.0",
    "croniter>=2.0",
    "greenlet>=3.2.4",
    "loguru>=0.7",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "marimo>=0.14.16",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.8",
]
